# turtlebot3_minimal_sims

./: CMakeLists.txt  README.md  package.xml
launch/: headless.launch.py  spawn_tb3.launch.py
models/arena_floor/: model.config  model.sdf
models/arena_walls/: model.config  model.sdf
models/cr5_arena_walls/: model.config  model.sdf
models/pillar_blue/: model.config  model.sdf
models/pillar_green/: model.config  model.sdf
models/pillar_red/: model.config  model.sdf
models/pillar_turquoise/: model.config  model.sdf
models/wooden_wall_1050_30_250/: model.config  model.sdf
models/wooden_wall_1050_30_250/materials/textures/: README.md
models/wooden_walls/: model.config  model.sdf
worlds/: empty.world
