<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_minimal_sims</name>
  <version>0.0.1</version>
  <description>
    Simulation package for the TUoS ROS 2 Course
  </description>
  <maintainer email="t.howard@sheffield.ac.uk">Tom Howard</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>ros_gz_sim</depend>
  <!-- <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend> -->
  
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>

</package>